--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2579,6 +2579,22 @@ section,
   font-size: 14px;
 }
 
+.project-video {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.project-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+
+
 @media (max-width: 991px) {
 
   .service-details .service-info,
@@ -2586,6 +2602,7 @@ section,
     margin-top: 30px;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Starter Section Section
