--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,7 +185,7 @@ h6 {
 @media (min-width: 1200px) {
   .header ~ main,
   .header ~ #footer {
-    margin-top: 100px;
+    margin-top: 120px;
   }
 }
 
@@ -467,13 +467,13 @@ h6 {
 --------------------------------------------------------------*/
 .page-title {
   color: var(--default-color);
-  padding: 25px 0 0 0;
+  padding: 40px 0 20px 0;
   position: relative;
 }
 
 .page-title .container {
   border-bottom: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-  padding-bottom: 25px;
+  padding-bottom: 20px;
 }
 
 .page-title h1 {
@@ -509,7 +509,7 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 80px 0;
   overflow: clip;
 }
 
@@ -518,12 +518,12 @@ section,
 --------------------------------------------------------------*/
 .section-title {
   text-align: center;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
   position: relative;
 }
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 20px;
   font-weight: 700;
   position: relative;
 }
