--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,7 @@ h6 {
 .navmenu {
     width: 100%;
     padding: 0;
+    margin: 0;
     z-index: 9997;
 }
 
@@ -878,7 +879,7 @@ section,
 @media (max-width: 992px) {
     .hero .hero-text {
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 0px;
     }
 
     .hero .hero-text h1 {
@@ -896,6 +897,10 @@ section,
     .hero .hero-visual .profile-container {
         width: 350px;
         height: 350px;
+    }
+
+    .profile-header {
+        display: none;
     }
 }
 
